@@ -3,116 +3,110 @@ package co.edu.uniquindio.application.services.impl;
 import co.edu.uniquindio.application.dto.CreateUserDTO;
 import co.edu.uniquindio.application.dto.EditUserDTO;
 import co.edu.uniquindio.application.dto.UserDTO;
-import co.edu.uniquindio.application.exceptions.NotFoundException;
 import co.edu.uniquindio.application.exceptions.ValueConflictException;
-import co.edu.uniquindio.application.mappers.UserMapper;
 import co.edu.uniquindio.application.models.entitys.User;
+import co.edu.uniquindio.application.repositories.UserRepository;
 import co.edu.uniquindio.application.services.UserService;
+import co.edu.uniquindio.application.mappers.UserMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Map;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
-public class UserServiceImpl implements UserService {
-
+public class UserServiceImpl implements UserService{
+    private final UserRepository userRepository;
     private final UserMapper userMapper;
-    private final Map<String, User> userStore = new ConcurrentHashMap<>();
+
 
     @Override
     public void create(CreateUserDTO userDTO) throws Exception {
-        // Validación para verificar si el email ya está en uso
+        //Validación del email
         if(isEmailDuplicated(userDTO.email())){
             throw new ValueConflictException("El correo electrónico ya está en uso.");
         }
 
-        // Transformación del DTO a User
+        //Transformación del DTO a User
         User newUser = userMapper.toEntity(userDTO);
         newUser.setPassword(encode(userDTO.password()));
 
-        // Almacenamiento del usuario
-        userStore.put(newUser.getId(), newUser);
+        //Almacenamiento del usuario
+        userRepository.save(newUser);
     }
+
+    private boolean isEmailDuplicated(String email){
+        return userRepository.findByEmail(email).isPresent();
+    }
+
 
     @Override
     public UserDTO get(String id) throws Exception {
-        // Recuperación del usuario
-        User user = userStore.get(id);
+        //Recuperación del usuario
+        Optional<User> userOptional = userRepository.findById(id);
 
-        // Si el usuario no existe, lanzar una excepción
-        if (user == null) {
-            throw new NotFoundException("El usuario con ID '" + id + "' no fue encontrado.");
+        //Validación del usuario
+        if (userOptional.isEmpty()) {
+            throw new Exception("Usuario no encontrado.");
         }
 
-        // Transformación del usuario a DTO
-        return userMapper.toUserDTO(user);
+        //Transformación del usuario a DTO
+        return userMapper.toUserDTO(userOptional.get());
     }
+
 
     @Override
     public void delete(String id) throws Exception {
-        // Recuperación del usuario
-        User user = userStore.get(id);
+        //Recuperación del usuario
+        Optional<User> userOptional = userRepository.findById(id);
 
-        // Si el usuario no existe, lanzar una excepción
-        if (user == null) {
-            throw new NotFoundException("El usuario con ID '" + id + "' no fue encontrado.");
+        //Validación del usuario
+        if (userOptional.isEmpty()) {
+            throw new Exception("Usuario no encontrado.");
         }
 
-        // Eliminación del usuario
-        userStore.remove(id);
+        //Eliminación del usuario
+        userRepository.delete(userOptional.get());
     }
+
 
     @Override
     public List<UserDTO> listAll() {
-        // Obtener todos los usuarios y convertirlos a DTOs
-        return userStore.values()
-                .stream()
-                .map(userMapper::toUserDTO)
-                .collect(Collectors.toList());
+        return userRepository.findAll()
+                .stream().map(userMapper::toUserDTO)
+                .toList();
     }
+
 
     @Override
     public void edit(String id, EditUserDTO userDTO) throws Exception {
-        // Recuperación del usuario
-        User user = userStore.get(id);
+        //Recuperación del usuario
+        Optional<User> userOptional = userRepository.findById(id);
 
-        // Si el usuario no existe, lanzar una excepción
-        if (user == null) {
-            throw new NotFoundException("El usuario con ID '" + id + "' no fue encontrado.");
+        //Validación del usuario
+        if (userOptional.isEmpty()) {
+            throw new Exception("Usuario no encontrado.");
         }
 
-        // Actualización de los campos del usuario
+        //Se obtiene el usuario que está dentro del Optional
+        User user = userOptional.get();
+
+        //Actualización de los datos del usuario
         user.setName(userDTO.name());
         user.setPhone(userDTO.phone());
-        user.setPhotoUrl(userDTO.photoUrl());
         user.setDateBirth(userDTO.dateBirth());
-        user.setRole(userDTO.role());
+        user.setPhotoUrl(userDTO.photoUrl());
 
-        // Actualización en el almacenamiento
-        userStore.put(id, user);
+        //Almacenamiento del usuario
+        userRepository.save(user);
     }
 
-    // ===== MÉTODOS AUXILIARES =====
-
-    /**
-     * Verifica si un email ya está registrado
-     */
-    private boolean isEmailDuplicated(String email) {
-        return userStore.values()
-                .stream()
-                .anyMatch(u -> u.getEmail().equalsIgnoreCase(email));
-    }
-
-    /**
-     * Codifica/encripta la contraseña usando BCrypt
-     */
-    private String encode(String password) {
+    private String encode(String password){
         var passwordEncoder = new BCryptPasswordEncoder();
         return passwordEncoder.encode(password);
     }
+
+
 }
